# vdot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
cmake/: GitVersionInfo.cmake
project/: icon.svg.import  new_avatar_parameter.tres  new_model_bundle.tres  project.godot
project/app/: add_avatar_window.gd  add_avatar_window.gd.uid  main.tscn
project/app/ui/: avatar.gd.uid
project/app/ui/menu/: menu_button.gd.uid  menu_button.tscn  menu_tooltip.gd.uid
project/app/ui/tracking/: live_link.gd  live_link.gd.uid  live_link.tscn  tracker_settings.gd  tracker_settings.gd.uid
project/app/ui/tracking/facial/: facial_tracker_settings.gd.uid  facial_tracker_settings.tscn  preview_head.png.import  preview_head_mat.tres
project/assets/icons/: plus-solid.svg.import  user-solid.svg.import
src/: CMakeLists.txt  register_extension.cpp  vdot.cpp  vdot.h  vdot.hpp  version.h.in  version.hpp.in
src/avatar/: avatar.cpp  avatar.hpp  avatar_bundle.cpp  avatar_bundle.hpp  avatar_manager.cpp  avatar_manager.hpp  avatar_parameter.cpp  avatar_parameter.h  avatar_parameter.hpp  avatar_parameter_eval.cpp  avatar_parameter_eval.h  avatar_parameter_eval.hpp
src/lipsync/: lipsync_server.cpp  lipsync_server.hpp
src/models/: model.cpp  model.hpp  model_bundle.cpp  model_bundle.h  model_bundle.hpp  model_format.cpp  model_format.hpp  model_loader.cpp  model_loader.hpp  model_parameter.cpp  model_parameter.h  model_parameter.hpp
src/models/2d/: model_2d.cpp  model_2d.hpp
src/models/2d/live2d/: cubism.hpp  cubism_effect.cpp  cubism_effect.hpp  cubism_effect_breath.hpp  cubism_effect_custom.hpp  cubism_effect_eye_blink.hpp  cubism_effect_hit_area.hpp  cubism_effect_target_point.hpp  cubism_model.cpp  cubism_model.hpp  cubism_motion_entry.hpp  cubism_value_abs.hpp  cubism_value_parameter.hpp  cubism_value_part_opacity.hpp  live2d_model_bundle.cpp  live2d_model_bundle.hpp  live2d_model_format.cpp  live2d_model_format.hpp
src/models/2d/live2d/renderer/: cubism_allocator.hpp  cubism_model_proxy.cpp  cubism_model_proxy.hpp  cubism_print.hpp  cubism_renderer.cpp  cubism_renderer.hpp  cubism_renderer_2d.cpp  cubism_renderer_2d.hpp  cubism_renderer_impl.cpp
src/networking/: collaboration_peer.cpp  collaboration_peer.hpp  collaboration_session.cpp  collaboration_session.h  collaboration_session.hpp
src/parameters/: parameter.cpp  parameter.hpp  parameter_context.cpp  parameter_context.hpp  parameter_input.cpp  parameter_input.hpp  parameter_output.cpp  parameter_output.h  parameter_output.hpp  parameter_server.cpp  parameter_server.hpp
src/tracking/: tracker.cpp  tracker.hpp  tracker_face.cpp  tracker_face.hpp  tracking_interface.cpp  tracking_interface.hpp  tracking_manager_node.cpp  tracking_manager_node.hpp  tracking_server.cpp  tracking_server.hpp
src/tracking/editor/: editor_plugin.cpp  editor_plugin.h  editor_plugin.hpp  tracking_plugin_panel.cpp  tracking_plugin_panel.hpp
src/tracking/editor/trackers/: face_tracker_panel.cpp  face_tracker_panel.hpp
src/tracking/interfaces/live_link/: editor_plugin.cpp  editor_plugin.h  editor_plugin.hpp  live_link_face_tracker.cpp  live_link_face_tracker.hpp  live_link_interface.cpp  live_link_interface.hpp  live_link_panel.cpp  live_link_panel.hpp  live_link_server.cpp  live_link_server.hpp
src/tracking/interfaces/meowface/: meow_face_server.cpp  meow_face_server.hpp
src/tracking/interfaces/vts/: vts_client.cpp  vts_client.hpp  vts_face_tracker.cpp  vts_face_tracker.hpp  vts_interface.cpp  vts_interface.hpp
src/tracking/standards/: arkit_blend_shapes.cpp  arkit_blend_shapes.hpp  unified_expressions.cpp  unified_expressions.hpp
src/utility/: bytes-advance.hpp  method-hash.hpp
templates/: CMakeLists.txt  template.gdextension.in
